# cppopengl

./: .gitignore  CMakeLists.txt  README.md  buildproto.sh  go.mod  main copy.cpp  main.cpp  main.go
bintools/app/: main.go
bintools/light/: main.go
bintools/mc/comm/: gltf.pb.go  pbartlogic.pb.go  pbdirspec.pb.go  pbmaterial.pb.go  pbmodel.pb.go  pbnode.pb.go  pbtexture.pb.go  transform.pb.go
bintools/objconvert/: main.go
bintools/stact/: main.go
bintools/start/: main.go
bintools/stdirspec/: main.go
bintools/stgltf/: main.go
bintools/stmaterial/: main.go
bintools/stmodel/: main.go
bintools/stscene/: main.go
bintools/stshader/: main.go
bintools/sttexture/: main.go
cli/: go.mod  go.sum  main.go
cli/cmd/: app.go  art.go  blur.go  genNormal.go  hammers.go  material.go  model.go  objConvert.go  root.go  shader.go  spec.go  tcpserver.go  texture.go
cli/mc/comm/: pbactlogic.pb.go  pbmaterial.pb.go  pbnode.pb.go  pbshaderprogram.pb.go  pbtexture.pb.go
docs/: material.md  normal_mapping.md  texture.md
others/include/game/: blinn_phong_point.h  function_chart.h  phong_spot.h
others/include/game/act_logic/: box_draw.h  function_draw.h  gbcd.h  light_source.h  lookat.h  rotate.h  translate.h  visual_quad_tree.h
others/include/game/art_logic/: blinn_phong_point.h  cubemap.h  function_chart.h  phong_spot.h  shadow_generate.h  simple.h
others/include/game/example/: example_list.h
others/include/game/logic/: box_draw.h  camera_logic.h  function_draw.h  lookat_logic.h  rotate_logic.h  translate_logic.h
others/include/game/material/: phong_spot.h  simple.h
others/include/glad/: glad.h
others/include/image/: stb_image.h
others/include/mc/: DebugDraw.h  app.h  apps.h  camera.h  camera_skybox.h  config.h  config.h.in  csv.h  engine.h  gameobject.h  keyinputsystem.h  logic_support.h  material.h  material_phong.h  material_store.h  mesh_render.h  model.h  model_store.h  shader.h  shader_store.h  texture.h  texture_store.h  tools_bound.h  tools_csv.inl  transform.h
others/include/mc/asset/: act_logic.h  art_logic.h  art_logic_simple.h  asset_manager.h  asset_manager.inl  bin_buffer.h  image.h  light.h  material.h  md5sum.h  model.h  node.h  scene.h  shader_code.h  shader_program.h  store.h  store.inl  texture.h
others/include/mc/comm/: gltf.pb.h  pbactlogic.pb.h  pbartlogic.pb.h  pbdirspec.pb.h  pbmaterial.pb.h  pbmodel.pb.h  pbnode.pb.h  pbshaderprogram.pb.h  pbtexture.pb.h  pnlight.pb.h  transform.pb.h
others/include/mc/container/: bounding_box.h  box2d.h  quad_tree.h  quad_tree.inl
others/include/mc/glmex/: show.h  vec.h
others/include/mc/gltf/: buffer.h  gltf.h
others/include/mc/log/: log.h
others/include/mc/tools/: base64.h  files.h  md5.h
others/lib/: libfreetype.6.dylib  libglad.dylib  libself.dylib  libuv.1.0.0.dylib
others/resource/asset/bin_buffer/: cube_92266.bin_buffer
others/resource/asset/material/: 76403.material.pb
others/resource/asset/model/: 27110.model.pb
others/resource/asset/scene/: scene_0
others/resource/gltf/: gominimal.json  minimal.json  minimal.json.gltf.pb
others/resource/material/: all.material  blinnPhongPoint.material  default.material  emerald.material
others/resource/model/: cube.model
others/resource/shader/: blinnPhong.frag.fs  blinnPhong.vert.vs  debugtriangle.fs  debugtriangle.vs  function_chart.frag.fs  function_chart.vert.vs  mvp.fs  mvp.vs  phong.frag.fs  phong.spot.frag.fs  phong.spot.vert.vs  phong.vert.vs  simple.frag.fs  v1.fs  v1.vs
others/study/glad/src/: glad.c
others/study/self/: fe.cpp  info.cpp
protos/mc/asset/: texture.proto
protos/mc/comm/: gltf.proto  pbactlogic.proto  pbartlogic.proto  pbdirspec.proto  pbmaterial.proto  pbmodel.proto  pbnode.proto  pbshaderprogram.proto  pbtexture.proto  transform.proto
src/: CMakeLists.txt  app.cpp  apps_camera.cpp  apps_csv.cpp  apps_engine.cpp  apps_glm.cpp  apps_init.cpp  apps_math.cpp  apps_vao.cpp  apps_xyzw.cpp  low_engine.cpp  low_gameobject.cpp  low_mesh_render.cpp  low_model.cpp  low_shader.cpp  low_texture.cpp  low_transform.cpp  shader.cpp  tools_image.cpp  transform.cpp
src/example/DebugDraw/: main.cpp
src/example/cube_transform/: main.cpp
src/example/freetype/: main.cpp
src/example/function_chart/: main.cpp
src/example/gbcd/: main.cpp
src/example/gltf_exp/: main.cpp
src/example/math/: main.cpp
src/example/protobuf_test/: main.cpp
src/example/uvt/: main.cpp
src/game/: blinn_phong_point.cpp  function_chart.cpp  phong_spot.cpp
src/game/act_logic/: box_draw.cpp  function_draw.cpp  gbcd.cpp  light_source.cpp  lookat.cpp  rotate.cpp  translate.cpp
src/game/art_logic/: blinn_phong_point.cpp  cubemap.cpp  function_chart.cpp  phong_spot.cpp  shadow_generate.cpp  simple.cpp
src/game/logic/: box_draw.cpp  camera_logic.cpp  function_draw.cpp  lookat_logic.cpp  rotate_logic.cpp  translate_logic.cpp
src/game/material/: blinn_phong_point.cpp  function_chart.cpp  phong_spot.cpp  simple.cpp
src/mc/asset/: act_logic.cpp  art_logic.cpp  art_logic_simple.cpp  asset_manager.cpp  bin_buffer.cpp  image.cpp  light.cpp  material.cpp  model.cpp  model_static.cpp  node.cpp  scene.cpp  shader_code.cpp  shader_program.cpp  texture.cpp
src/mc/comm/: gltf.pb.cc  pbactlogic.pb.cc  pbartlogic.pb.cc  pbdirspec.pb.cc  pbmaterial.pb.cc  pbmodel.pb.cc  pbnode.pb.cc  pbshaderprogram.pb.cc  pbtexture.pb.cc  pnlight.pb.cc  transform.pb.cc
src/mc/container/: bounding_box.cpp  box2d.cpp
src/mc/gltf/: buffer.cpp
src/mc/log/: log.cpp
src/mc/low/: DebugDraw.cpp  camera.cpp  camera_skybox.cpp  engine.cpp  engine_asset.cpp  engine_cursor.cpp  engine_draw.cpp  engine_gltf.cpp  engine_keyinput.cpp  gameobject.cpp  keyinputsystem.cpp  logic_support.cpp  material.cpp  material_phong.cpp  material_store.cpp  mesh_render.cpp  model.cpp  model_store.cpp  shader.cpp  shader_store.cpp  texture.cpp  texture_store.cpp  transform.cpp
(+3 files in other folders)
